--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -65,12 +65,12 @@
 </button>
 
 {{!-- 
-      Mostrar nombre del usuario autenticado 
+      Mostrar nombre del usuario autenticado (res.locals.user)
       y el botón de salir de la sesión solo si está autenticado
 --}}
-  {{#if user}}
-      <!-- Usuario autenticado -->
-      <span>Hola, {{user.first_name}} {{user.last_name}}</span>
+  {{#if res.locals.user}}
+      <!-- Usuario autenticado --> 
+      <span>Hola, {{res.locals.user.first_name}} {{res.locals.user.last_name}}</span>
 
       {{!-- Logout / salir de la sesión  --}}
       <form id="logoutForm" action="/api/sessions/logout" method="POST" style="display:inline;">
