--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -6,33 +6,40 @@
 -->
 <!-- Linea del título -->
 <div class="tit-simple">
-    <h1>Coder Shop - Crear identificación de un nuevo usuario</h1>
+    <h1>Coder Shop - Identificación de nuevo usuario</h1>
 </div>
 <hr  class="lineaSupTit" >
-<!--  ----------------------------------------------------------- -->
+<!--  ----------------------------------------------------------- --> 
 
 <h4 class="muted-blue">Nuevo usuario</h4>
 
-<form action="/api/sessions/register" method="post" id="createForm" >
-      <label for="first_name">Nombre:</label> <br />
+<form action="/api/sessions/register" method="post"  id="createForm" >
+  <fieldset> 
+    <legend>Crear nuevo usuario</legend>
+      <label for="first_name">Nombre:</label> 
       <input type="text" id="first_name" name="first_name" placeholder="Nombres"  required /><br />
       
-      <label for="last_name">Apellido:</label><br />
+      <label for="last_name">Apellido:</label>
       <input type="text" id="last_name" name="last_name" placeholder="Apellido" required /><br />
 
-      <label for="email">Email:</label><br />
+      <label for="email">Email:</label>
       <input type="email" id="email" name="email" placeholder="MiCorreo@valido.com" required /><br />
       
-      <label for="password">Password:</label> <br />
+      <label for="password">Password:</label> 
       <input type="password" id="password" name="password" placeholder="****" required /><br />
       
-      <label for="age">Edad:</label><br />
+      <label for="age">Edad:</label>
       <input type="age" id="age" name="age" placeholder="99" /><br />
       
-      <label for="role">Rol:</label><br />
-      <input type="role" id="role" name="role" value="user" readonly /><br />
-            
+      <label for="role">Rol:</label>
+        <select name="role">
+            <option value="user" selected>user</option>
+            <option value="admin">admin</option>
+        </select>
+
+    <br /><br />
     <button type="submit"> Registrar</button>
+  </fieldset>
 </form>
 
 <hr  class="lineaSupTit" >
