--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
 </head>
 <body>
 
-  {{!-- // esta es la línea luperior con botones comunes a todas las páginas --}}
-  <p class="lineaSupTit">
+{{!-- // esta es la línea luperior con botones comunes a todas las páginas --}}
+<p class="lineaSupTit">
   
   {{!-- Ir al HOME --}}
   <button 
@@ -30,22 +30,6 @@
   onclick="location.href='/'" 
   title="Ir a la Home">
   🏠 Home
-</button>
-
-{{!-- Ir a Real time products --}}
-<button 
-  class="btn-treal" /*  btn-separado */
-  onclick="location.href='/realtimeproducts'" 
-  title="Ir a ver página en Tiempo Real">
-  Tiempo real
-</button>
-
-{{!-- Ir a ver productos con paginación --}}
-<button 
-  class="btn-treal" 
-  onclick="location.href='/products'" 
-  title="Ver esta página de productos con paginación">
-  Con paginación
 </button>
 
 {{!-- CRUD usuarios  --}}
@@ -68,9 +52,9 @@
       Mostrar nombre del usuario autenticado (res.locals.user)
       y el botón de salir de la sesión solo si está autenticado
 --}}
-  {{#if res.locals.user}}
+  {{#if user}}
       <!-- Usuario autenticado --> 
-      <span>Hola, {{res.locals.user.first_name}} {{res.locals.user.last_name}}</span>
+      <span>Hola, {{user.first_name}} {{user.last_name}}</span>
 
       {{!-- Logout / salir de la sesión  --}}
       <form id="logoutForm" action="/api/sessions/logout" method="POST" style="display:inline;">
@@ -80,8 +64,6 @@
       <!-- Usuario NO autenticado -->
       <span>Usuario no autenticado ...</span>
   {{/if}}
-
-
 
 {{!-- Ir a probar los end points api/products y api/carts --}}
 {{!-- <a href="./menuPrue.html" 
