--- a/src/views/crudUsers.handlebars
+++ b/src/views/crudUsers.handlebars
@@ -20,7 +20,7 @@
 
 <h2>Crear un usuario</h2>
 {{!-- <form id="newUserForm" method="POST" action="/crud/users"> --}}
-<form id="createForm" method="POST" action="/crud/users">
+<form id="createForm2" method="POST" action="/crud/users">
   <fieldset>
     <legend>Crear nuevo usuario</legend>
     <label>Nombre:</label>
@@ -44,7 +44,7 @@
       <option value="admin">admin</option>
     </select>
 
-    <button type="submit">Crear</button>
+    <button type="submit" >Crear</button>
   </fieldset>
 </form>
 
